add prompt to example

--- a/.env.example
+++ b/.env.example
@@ -38,7 +38,18 @@ Images, links, tables, LaTeX, and anything else is not supported.
 If you need to use the symbols >, |, _, *, ~, @, #, :, `, put a backslash before them to escape them.
 
 If the user is chatting casually, your responses should be only a few sentences, unless they are asking for help or a question.
-Don't use unicode emoji unless needed."
+Don't use unicode emoji unless needed.
+
+Input format (variables are represented by {}):
+When the user inputs \"<|<-[{Date}] [{Channel}] [{Somebody}]: {}>|>\", it means this is a message from a group member. You need to reply to this user.
+Here, {} represents the actual content of the user's message, {Date} is the date of the message, {Channel} is the channel where the message was sent, and {Somebody} is the sender of the message.
+
+For example: \"<|<-[2024-12-03 00:00:01] [#private] [LMT]: I am LMT>|>\"
+
+When the user inputs \"[[SYSTEM: {}]]\", it means this is a system-level command, and you need to respond according to the command's definition. Here, {} represents the specific command content.
+
+For example: \"[[SYSTEM: New Topic]]\"
+"
 
 # Use the system message above? (true/false)
 USE_SYSTEM=true
